--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,25 +2,88 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto';
+  font-size: 14px;
+  background-color: #FdFAFE;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+mui-btn {
+  font-size: 14px;
 }
 
-* {
-  box-sizing: border-box;
+.flex {
+  display: flex;
+  gap: 25px;
+  padding: 35px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.main {
+  display: flex;
+  width: 75%;
+  gap: 30px;
+  flex-direction: column;
+}
+
+.aside {
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+  border-radius: 20px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.gap-1 {
+  gap: 10px;
+}
+
+.gap-2 {
+  gap: 20px;
+}
+
+.gap-3 {
+  gap: 30px;
+}
+
+.m-auto {
+  margin: auto;
+}
+
+.j-content {
+  justify-content: space-between;
+}
+
+.j-center {
+  justify-content: center;
+}
+
+.f-direction {
+  flex-direction: column;
+}
+
+.f-size1 {
+  display: flex;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  color: black;
+  gap: 8px;
+}
+
+.f-size2 {
+  display: flex;
+  font-size: 16px;
+  line-height: 24px;
+  color: black;
+  font-weight: bold;
+  gap: 8px;
+}
+
+.custom-card {
+  width: 323px;
+  border-radius: 20px;
+  padding: 15px;
+  gap: 8px;
 }
