--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,13 @@ mui-btn {
   display: flex;
   gap: 25px;
   padding: 35px;
+  padding-top:90px;
 }
 
 .main {
   display: flex;
   width: 75%;
-  gap: 30px;
+  gap: 60px;
   flex-direction: column;
 }
 
@@ -69,6 +70,7 @@ mui-btn {
   line-height: 20px;
   font-weight: 400;
   color: black;
+  padding-top: 8px;
   gap: 8px;
 }
 
@@ -78,12 +80,14 @@ mui-btn {
   line-height: 24px;
   color: black;
   font-weight: bold;
+  padding-top: 8px;
   gap: 8px;
 }
 
 .custom-card {
   width: 323px;
+  height: 295px;
   border-radius: 20px;
-  padding: 15px;
+  padding: 10px, 20px, 20px, 20px;
   gap: 8px;
 }
